fix: segurança para deploy - secrets, CORS, DELETE auth, .dockerignore